--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
 <body>
     <a href="https://github.com/kilimchoi/engineering-blogs">https://github.com/kilimchoi/engineering-blogs</a>
-    <script type="text/javascript" src="index.js"></script>
+    <!-- <script type="text/javascript" src="index.js"></script> -->
+    <!-- <script type="text/javascript" src="math.js"></script> -->
+    <!-- <script type="text/javascript" src="search.js"></script> -->
+    <script type="text/javascript" src="sort.js"></script>
 </body>
 
 </html>
