--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <!-- <script type="text/javascript" src="index.js"></script> -->
     <!-- <script type="text/javascript" src="math.js"></script> -->
     <!-- <script type="text/javascript" src="search.js"></script> -->
-    <script type="text/javascript" src="sort.js"></script>
+    <!-- <script type="text/javascript" src="sort.js"></script> -->
+    <script type="text/javascript" src="misc.js"></script>
 </body>
 
 </html>
