--- a/index.html
+++ b/index.html
@@ -3,15 +3,65 @@
 
 <head>
     <title>Javascript</title>
+    <!-- <script>
+        window.factors = window.factors || function () { this.q = []; var i = new CustomEvent("FACTORS_QUEUED_EVENT"), n = function (t, e) { this.q.push({ k: t, a: e }), window.dispatchEvent(i) }; return this.track = function (t, e, i) { n("track", arguments) }, this.init = function (t, e, i) { this.TOKEN = t, this.INIT_PARAMS = e, this.INIT_CALLBACK = i, window.dispatchEvent(new CustomEvent("FACTORS_INIT_EVENT")) }, this.reset = function () { n("reset", arguments) }, this.page = function (t, e) { n("page", arguments) }, this.updateEventProperties = function (t, e) { n("updateEventProperties", arguments) }, this.identify = function (t, e) { n("identify", arguments) }, this.addUserProperties = function (t) { n("addUserProperties", arguments) }, this.getUserId = function () { n("getUserId", arguments) }, this.call = function () { var t = { k: "", a: [] }; if (arguments && 1 <= arguments.length) { for (var e = 1; e < arguments.length; e++)t.a.push(arguments[e]); t.k = arguments[0] } this.q.push(t), window.dispatchEvent(i) }, this.init("lvnazwm6uiyi4fjj7x5qneri6070ymvc"), this }(), function () { var t = document.createElement("script"); t.type = "text/javascript", t.src = "https://app.factors.ai/assets/v1/factors.js", t.async = !0, d = document.getElementsByTagName("script")[0], document.head.insertBefore(t, d) }();
+    </script> -->
 </head>
 
 <body>
+    <!-- <iframe src="https://app.factors.ai/welcome" width="800" height="800">
+    </iframe> -->
+
+    1. Hoisting
+
+    2. Objects (Object referencing , copying, cloning)
+
+    3.'this" keyword
+
+    4. Functions ( arrow functions, function expressions,
+    IIFE etc)
+
+    5. Array methods
+
+    6. var, let and const
+
+    7. Event loop and execution context
+
+    8. map, filter and reduce
+
+    9. Event bubbling/capturing/delegation
+    10. call, bind, apply
+
+    11. Prototypal inheritance
+
+    12. Debouncing/Throttling
+
+    13. callbacks
+
+    14. Promises , async/await,
+
+    15. Currying
+
+    16. Scopes
+
+    17. Memoization
+
+    18. Micro/macro tasks
+
+    19. Closures
+
+    20. Memoization
+
+    21. setTimeout v/s setinterval
+    <!-- <a href="https://www.hitwebcounter.com" target="_blank"> -->
+    <!-- <img src="https://hitwebcounter.com/counter/counter.php?page=8009557&style=0005&nbdigits=9&type=page&initCount=0" border="0" /></a>     -->
     <a href="https://github.com/kilimchoi/engineering-blogs">https://github.com/kilimchoi/engineering-blogs</a>
     <!-- <script type="text/javascript" src="index.js"></script> -->
     <!-- <script type="text/javascript" src="math.js"></script> -->
     <!-- <script type="text/javascript" src="search.js"></script> -->
     <!-- <script type="text/javascript" src="sort.js"></script> -->
-    <script type="text/javascript" src="misc.js"></script>
+    <!-- <script type="text/javascript" src="misc.js"></script> -->
+
 </body>
 
 </html>
